--- a/dotNet5781_03A_5173_9142/MainWindow.xaml
+++ b/dotNet5781_03A_5173_9142/MainWindow.xaml
@@ -8,17 +8,26 @@
         Title="MainWindow" Height="640" Width="800">
     <Grid Name="MainGrid">
         <Grid.RowDefinitions>
-            <RowDefinition Height="50*"/>
-            <RowDefinition Height="400*"/>
+            <RowDefinition Height="69*"/>
+            <RowDefinition Height="542*"/>
         </Grid.RowDefinitions>
-        <Grid Name="UpGrid" HorizontalAlignment="Stretch" Height="auto" Grid.Row="0"
-VerticalAlignment="Stretch" Width="auto">
+        <Grid Height="72" Grid.Row="0" Name="UpGrid"
+VerticalAlignment="Top" Margin="10,0,-0.4,0" RenderTransformOrigin="0.357,1.112" Grid.RowSpan="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="199*"/>
+                <ColumnDefinition Width="200*"/>
+                <ColumnDefinition Width="198*"/>
             </Grid.ColumnDefinitions >
+            <ComboBox  Height="68" SelectionChanged="ComboBox_SelectionChanged" Name="cbBusLines" 
+             HorizontalAlignment= "Right" VerticalAlignment="Top" Width="198" Grid.ColumnSpan="2"/>
+            <Label Grid.Column="0"  VerticalAlignment="Center" Content="Bus Line Number:" FontSize="18" HorizontalAlignment="Center" Width="196" Height="41" Margin="0,17,0,10"/>
+            <Label Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="74.8,17,75.2,17" Content="Area:" FontSize="18" Height="34" Width="50"/>
+            <TextBox Name ="tbArea" HorizontalAlignment="Right" VerticalAlignment="Top"
+                     Grid.Column="2" Margin="0,0,0.6,0" TextWrapping="Wrap" Text="{Binding Path=Place}" FontSize="18" Height="68" Width="199" Grid.ColumnSpan="2"/>
         </Grid>
+        <ListBox Name="lbBusLineStations" ItemsSource="{Binding}" HorizontalAlignment="Left" Height="535" Grid.Row="1" VerticalAlignment="Top" Width="399" SelectionChanged="cbBusLines_SelectionChanged" Margin="0,0.2,0,0"/>
+        <TextBox HorizontalAlignment="Left" Height="87" Margin="524,454.2,-0.4,0" Grid.Row="1" TextWrapping="Wrap" 
+                 Text="yishai hetli:   318645173&#xD;&#xA;&#xD;&#xA;david cohen: 311209142 " VerticalAlignment="Top" Width="270" FontSize="18" FontWeight="Bold"/>
     </Grid>
 </Window>
