--- a/dotNet5781_03B_5173_9142/Window2.xaml
+++ b/dotNet5781_03B_5173_9142/Window2.xaml
@@ -12,7 +12,7 @@
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
         Title="Detail" Height="300" Width="255"  >
-    <Grid x:Name="myGrid">
+    <Grid x:Name="myGrid" Background="BlueViolet">
         <Grid.RowDefinitions>
             <RowDefinition Height ="4*"/>
             <RowDefinition Height ="*"/>
