--- a/PL_WPF/MainWindow.xaml
+++ b/PL_WPF/MainWindow.xaml
@@ -7,14 +7,15 @@
         mc:Ignorable="d"
         Title="user" Height="300" Width="400" >
     <Grid>
-        <GroupBox Header="Choose Option:" Height="121" Margin="60,39,60,0" VerticalAlignment="Top" FontSize="16" FontStyle="Italic" FontWeight="SemiBold">
-            <StackPanel Margin="21,20,29,24">
+        <GroupBox Header="Choose Option:" Height="270" VerticalAlignment="Top" FontSize="16" FontStyle="Italic" FontWeight="SemiBold">
+            <StackPanel >
                 <RadioButton x:Name ="rbDriver" Content="Driver" Height="24" IsChecked="True"/>
-                <RadioButton x:Name ="rbManage" Content="Management" Height="23" Margin="0,0,-11,0"/>
+                <RadioButton x:Name ="rbManage" Content="Management" Height="23" />
             </StackPanel>
         </GroupBox>
-        <Button x:Name="btnGO" Content="GO" HorizontalAlignment="Left" Height="42" 
-             Margin="149,170,0,0" VerticalAlignment="Top" Width="105" Background="#FF4496CF" FontSize="16" FontFamily="Kristen ITC" FontWeight="Bold" Click="btnGO_Click"/>
-
+        <Button x:Name="btnGO" Content="GO" HorizontalAlignment="Left" Height="Auto" 
+             Margin="149,170,0,58.4" Width="105" Background="#FF4496CF" 
+                        FontSize="16" FontFamily="Kristen ITC" FontWeight="Bold" Click="btnGO_Click"/>
+        <Frame x:Name="Main" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
