--- a/PL_WPF/Windows/ManageWindow.xaml
+++ b/PL_WPF/Windows/ManageWindow.xaml
@@ -5,6 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL_WPF"
         mc:Ignorable="d"
+          xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+     TextElement.FontWeight="Regular"
+     TextElement.FontSize="13"
+     TextOptions.TextFormattingMode="Ideal"
+     TextOptions.TextRenderingMode="Auto"
+     Background="{DynamicResource MaterialDesignPaper}"
+     FontFamily="{DynamicResource MaterialDesignFont}"
         Title="ManageWindow" Height="350" Width="200">
     <Grid>
         <Button Content="Buses" Margin="30,41,30,0" FontSize="20" FontStyle="Oblique" Foreground="CadetBlue"
