--- a/PL_WPF/LineStationDatails.xaml
+++ b/PL_WPF/LineStationDatails.xaml
@@ -5,13 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL_WPF"
         mc:Ignorable="d"
-        Title="LineStationDatails" Height="450" Width="800">
+        Title="LineStationDatails" Height="350" Width="600">
     <Grid>
 
-        <ListBox x:Name="list" Height="500" Background="DarkGray"
-                         Grid.ColumnSpan="3" Grid.RowSpan="3" Grid.Column="1" Grid.Row="2"
+        <ListBox x:Name="list" Background="DarkGray"
                          ItemsSource="{Binding lines, Mode=OneWayToSource, 
-                    UpdateSourceTrigger =PropertyChanged}" >
-        </ListBox>
+                    UpdateSourceTrigger =PropertyChanged}" Margin="0,0,-0.4,0" />
+        
     </Grid>
 </Window>
