--- a/PL_WPF/MainWindow.xaml
+++ b/PL_WPF/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL_WPF"
         mc:Ignorable="d"
-        Title="user" Height="300" Width="400" >
+        Title="user" Height="550" Width="800" >
     <Grid>
         <GroupBox Header="Choose Option:" Height="270" VerticalAlignment="Top" FontSize="16" FontStyle="Italic" FontWeight="SemiBold">
             <StackPanel >
@@ -13,9 +13,12 @@
                 <RadioButton x:Name ="rbManage" Content="Management" Height="23" />
             </StackPanel>
         </GroupBox>
-        <Button x:Name="btnGO" Content="GO" HorizontalAlignment="Left" Height="Auto" 
-             Margin="149,170,0,58.4" Width="105" Background="#FF4496CF" 
+        <Button x:Name="btnGO" Content="LOGE IN" HorizontalAlignment="Left" Height="35" 
+             Margin="100,216,0,19" Width="144" Background="#FF4496CF" 
                         FontSize="16" FontFamily="Kristen ITC" FontWeight="Bold" Click="btnGO_Click"/>
-        <Frame x:Name="Main" NavigationUIVisibility="Hidden"/>
+        <PasswordBox x:Name="password"   FontSize="16" HorizontalAlignment="Left" Margin="182,163,0,0" VerticalAlignment="Top" Width="147" Height="35"/>
+        <TextBox FontSize="16" IsReadOnly="True" FontWeight="SemiBold" HorizontalAlignment="Left" Height="35" Margin="12,163,0,0" TextWrapping="Wrap" Text="enter your password:" VerticalAlignment="Top" Width="162"/>
+        <TextBox FontSize="16" IsReadOnly="True" Width="160" HorizontalAlignment="Left" Height="35" Margin="12,115,0,0"  FontWeight="Medium" TextWrapping="Wrap" Text="enter your username:" VerticalAlignment="Top"/>
+        <TextBox x:Name="userName" FontSize="15" Width="153" HorizontalAlignment="Left" Height="35" Margin="184,115,0,0" FontWeight="Medium"  TextWrapping="Wrap"  VerticalAlignment="Top"/>
     </Grid>
 </Window>
