--- a/PL_WPF/AddBus.xaml
+++ b/PL_WPF/AddBus.xaml
@@ -4,35 +4,51 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL_WPF"
-        mc:Ignorable="d"
-        Title="AddBus" Height="215" Width="300"
-          xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-     TextElement.FontWeight="Regular"
-     TextElement.FontSize="13"
-     TextOptions.TextFormattingMode="Ideal"
-     TextOptions.TextRenderingMode="Auto"
-     Background="{DynamicResource MaterialDesignPaper}"
-     FontFamily="{DynamicResource MaterialDesignFont}">
-    <Grid>
+        mc:Ignorable="d" FontSize="18" 
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal" 
+        TextOptions.TextRenderingMode="Auto"        
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{DynamicResource MaterialDesignFont}"
+        Title="Window1" Height="400" Width="320">
+    <Grid x:Name="myGrid" Background="LightGray">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-
+            <RowDefinition Height ="*"/>
+            <RowDefinition Height ="*"/>
+            <RowDefinition Height ="*"/>
+            <RowDefinition Height ="*"/>
+            <RowDefinition Height ="*"/>
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Vertical" TextBlock.Foreground="{DynamicResource MaterialDesignBody}" >
-            <DatePicker x:Name="myDate" Grid.Row="0" SelectedDateFormat="Long" AllowDrop="True" 
-                    materialDesign:HintAssist.Hint="Activity Date"/>
-            <TextBox x:Name="licens" materialDesign:HintAssist.Hint="License Plate"
-                     Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center"/>
-            <TextBox x:Name="totalTrip" materialDesign:HintAssist.Hint="Total Trip"
-                     Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center"/>
-            <TextBox x:Name="fuel" materialDesign:HintAssist.Hint="Fuel"
-                     Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center"/>
-        </StackPanel>
-        <Button Grid.Row="4" Click="Add_Click" Content="Add"/>
+
+        <!-- Date Picker and  button -->
+        <DatePicker x:Name="myDate" Grid.Row="0"  DatePicker.SelectedDateChanged="myDate_SelectedDateChanged"
+         FontSize="24"  SelectedDateFormat="Long" AllowDrop="True" 
+                    materialDesign:HintAssist.Hint=" Select A Date"
+                    PreviewKeyDown="myDate_PreviewKeyDown" Focusable="True" />
+        <!-- License text and  button -->
+        <TextBox x:Name="lisence" Grid.Row=" 1" 
+                 materialDesign:HintAssist.Hint="enter the licence plate:" FontSize="20"
+        Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center"
+                 PreviewKeyDown="lisence_PreviewKeyDown" Focusable="True"/>
+
+        <!-- Fuel text and  button -->
+        <TextBox x:Name="fuels" Grid.Row="2" Grid.Column="0"  
+         materialDesign:HintAssist.Hint="enter the amount of fuel:"  FontSize="20"
+        Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center"
+                 PreviewKeyDown ="fuels_PreviewKeyDown"  Focusable="True"/>
+
+        <!-- Fuel text and  button -->
+        <TextBox x:Name="milages" Grid.Row="3"
+         materialDesign:HintAssist.Hint=" enter milages of the bus:" FontSize="20"
+        Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center"
+                 PreviewKeyDown ="milages_PreviewKeyDown" Focusable="True"/>
+
+        <!--Create a Bus click-->
+        <Button x:Name="createBus" Content=" Create a bus "
+          Grid.Row="4"  Margin="20,10,20,10"  Focusable="True"
+         VerticalAlignment="Stretch"  Height="Auto" Click="createBusLine" Background="LightGreen" />
     </Grid>
 </Window>
