--- a/PL_WPF/LineWindow.xaml
+++ b/PL_WPF/LineWindow.xaml
@@ -25,14 +25,16 @@
         </Grid.ColumnDefinitions>
 
         <Button Grid.Row="0" Grid.Column="0" Click="AddLine_click" Content="Add Line" Height="30" Style="{StaticResource MaterialDesignRaisedLightButton}"
-                       Margin="1,1,0,0" Width="130" ToolTip="Resource name: MaterialDesignRaisedLightButton"  />
+                       Margin="1,1,0,0" Width="130" ToolTip="Resource name: MaterialDesignRaisedLightButton"/>
         <ListBox x:Name="list"  MouseDoubleClick="list_MouseDoubleClick"  Background="DarkGray" 
                  Height="440" Grid.ColumnSpan="3" Margin="0,0,10,20" Grid.RowSpan="3" Grid.Column="0" Grid.Row="1">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel>
+                    <StackPanel Orientation="Horizontal">
                         <TextBlock Text="{Binding}"/>
-                        <StackPanel Orientation="Vertical">
+                        <StackPanel>
+                            <Button Click="Remove_click" Content="Remove" Height="30" Style="{StaticResource MaterialDesignRaisedLightButton}"
+                  Margin="300,20,0,0" Width="140"/>
                             <Button Click="AddStop_click" Content="Add A new Stop" Height="30" Style="{StaticResource MaterialDesignRaisedLightButton}"
                   Margin="300,20,0,0" Width="140"/>
                         </StackPanel>
