--- a/PL_WPF/StationsWindow.xaml
+++ b/PL_WPF/StationsWindow.xaml
@@ -25,7 +25,7 @@
         </Grid.ColumnDefinitions>
         <Button Grid.Row="0" Grid.Column="0" Click="AddStation_click" Content="Add Station" Height="30" Style="{StaticResource MaterialDesignRaisedLightButton}"
                        Margin="1,1,0,0" Width="130" ToolTip="Resource name: MaterialDesignRaisedLightButton"/>
-        
+
         <ListBox x:Name="list"  Background="DarkGray" MouseDoubleClick="list_MouseDoubleClick"
                  Height="440" Grid.ColumnSpan="3" Margin="0,0,10,20" Grid.RowSpan="3" Grid.Column="0" Grid.Row="2">
             <ListBox.ItemTemplate>
@@ -40,5 +40,6 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <Button Content="pair update" Grid.Column="1" Background="LightGreen"  HorizontalAlignment="Left"   Margin="100,1,0,0" VerticalAlignment="Top" Click="UpdateTwoStations" Width="166" Height="30"/>
     </Grid>
 </Page>
