--- a/PL_WPF/MainWindow.xaml
+++ b/PL_WPF/MainWindow.xaml
@@ -21,7 +21,7 @@
         </Grid.ColumnDefinitions>
         <GroupBox Header="Choose Option:" Grid.ColumnSpan="2" Height="270" VerticalAlignment="Top" FontSize="16" FontStyle="Italic" FontWeight="SemiBold">
         </GroupBox>
-        <Button x:Name="btnGO" Content="LOGE IN" HorizontalAlignment="Left" Height="Auto" 
+        <Button x:Name="btnGO" Content="LOG IN" HorizontalAlignment="Left" Height="Auto" 
              Margin="110,184,0,296" Width="144" Background="#FF4496CF" 
                         FontSize="16" FontFamily="Kristen ITC" FontWeight="Bold" Click="btnGO_Click"/>
         <PasswordBox x:Name="password"   FontSize="16" HorizontalAlignment="Left" Margin="182,100,0,0" VerticalAlignment="Top" Width="147" Height="35"/>
