--- a/PL_WPF/LineWindow.xaml
+++ b/PL_WPF/LineWindow.xaml
@@ -25,7 +25,7 @@
         </Grid.ColumnDefinitions>
 
         <Button Grid.Row="0" Grid.Column="0" Click="AddLine_click" Content="Add Line" Height="30" Style="{StaticResource MaterialDesignRaisedLightButton}"
-                       Margin="1,1,0,0" Width="130" ToolTip="Resource name: MaterialDesignRaisedLightButton"/>
+                       Margin="1,1,0,0" Width="130"/>
         <ListBox x:Name="list"  MouseDoubleClick="list_MouseDoubleClick"  Background="DarkGray" 
                  Height="440" Grid.ColumnSpan="3" Margin="0,0,10,20" Grid.RowSpan="3" Grid.Column="0" Grid.Row="1">
             <ListBox.ItemTemplate>
